# tareas_api

./: Cargo.toml  README.md  Rocket.toml
rethinkdb_data/: log_file
src/: main.rs
src/api/: mod.rs
src/api/tareas/: controller.rs  mod.rs  model.rs
src/api/usuarios/: controller.rs  model.rs
src/api/web_sockets/: controller.rs
src/utils/: mod.rs  utils.rs
