[package]
name = "tareas_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
unreql = "0.2.0"
argon2 = "0.5.3"
jsonwebtoken  = "9.3.1"
serde_json = "1.0.140"
ws = { package = "rocket_ws", version = "0.1.1" }
rand = "0.9.0"
validator = { version = "0.20.0", features = ["derive"] }
rocket_cors = "0.6.0"
zip = "2.6.1"
utoipa = {version = "*",features = ["rocket_extras"]}
utoipa-swagger-ui = {version = "9.0.1",features = ["rocket"]}